# fync

./: README.md  pyproject.toml
.github/workflows/: build-publish.yml
src/fync/: __init__.py  fync.py  get.py
