[project]
name = "fync"
version = "1.0.0"
description = "Automatically trigger command on directory update"
authors = [{ name = "Fanuware", email = "fanuware@gmail.com" }]
license = "MIT"
repository = "https://github.com/fanuware/fync"
readme = "README.md"
requires-python = ">=3.9"
packages = [
    { include = "fync", from = "src" },
]
dependencies = [
  "watchdog (>=6.0.0,<7.0.0)",
]

[project.scripts]
fync = 'fync:fync.cli'
fync-get = 'fync:get.cli'



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
